{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "Player1",
            "id": "85664f00-04e1-4dbc-897e-f652e414bc36",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "104bf5b2-c6ca-4f8e-9320-0f2ab52a68f0",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "d97a559e-57e9-484a-bafa-8966a72b237e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "86cdf78f-63f0-4a7e-97fd-59b387a932d8",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "276aff02-a4ec-4a93-902f-85395369498b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Player2",
            "id": "1900cadc-b3ed-49ec-a8a6-f32e3ce0ddd5",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "66e069d8-50bc-4f1a-bc1b-41f4350ef623",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "bb0ba4e0-f860-46b7-b6fe-640be72d8611",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "dfc20b42-3463-400b-b021-cb85d6b57ced",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "913ea500-3f12-4fbc-88cc-2983b7a9f1d1",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}